Bug 1720367 [wpt PR 29650] - Refactored scroll timeline tests to defaults to progress based testing., a=testonly
Automatic update from web-platform-tests
Refactored scroll timeline tests to defaults to progress based testing.

Converted a few tests to be progress based and fixed a conversion bug in
animation.cc

Bug: 1216655
Change-Id: I0882800677a4af0863883d59970594ea27cfb582
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3025004
Commit-Queue: Jordan Taylor <jortaylomicrosoft.com>
Reviewed-by: Kevin Ellis <keverschromium.org>
Cr-Commit-Position: refs/heads/master{#902091}

--

wpt-commits: c4241caddefcd03ccb77935f71f5d787740cfb75
wpt-pr: 29650

UltraBlame original commit: 2649351328e7706941e517a9825139a7365ea8d2

--- a/testing/web-platform/tests/scroll-animations/cancel-animation.html
+++ b/testing/web-platform/tests/scroll-animations/cancel-animation.html
@@ -12,7 +12,6 @@ utf
 8
 >
 <
-<
 title
 >
 Canceling
@@ -176,6 +175,67 @@ use
 strict
 '
 ;
+/
+/
+TODO
+(
+crbug
+.
+com
+/
+1216655
+)
+:
+Remove
+time
+range
+.
+Once
+time
+range
+is
+removed
+all
+/
+/
+functions
+that
+include
+.
+.
+.
+WithTimeRange
+(
+)
+should
+be
+replaced
+with
+the
+same
+/
+/
+function
+but
+without
+that
+ending
+.
+For
+example
+:
+/
+/
+/
+/
+createScrollLinkedAnimationWithTimeRange
+(
+)
+=
+>
+createScrollLinkedAnimation
+(
+)
 promise_test
 (
 async
@@ -186,7 +246,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -299,7 +359,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -429,7 +489,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -563,7 +623,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -644,7 +704,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -742,7 +802,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -884,7 +944,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -1002,7 +1062,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -1132,7 +1192,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -1308,7 +1368,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
