--- a/testing/web-platform/tests/scroll-animations/current-time.html
+++ b/testing/web-platform/tests/scroll-animations/current-time.html
@@ -130,6 +130,22 @@ js
 script
 >
 <
+script
+src
+=
+"
+.
+/
+testcommon
+.
+js
+"
+>
+<
+/
+script
+>
+<
 body
 >
 <
@@ -158,46 +174,84 @@ setupScrollTimelineTest
 (
 )
 ;
-/
-/
-Set
-the
-timeRange
-such
-that
-currentTime
-maps
-directly
-to
-the
-value
-/
-/
-scrolled
-.
-The
-contents
-and
+const
+scrollTimeline
+=
+new
+ScrollTimeline
+(
+{
+scrollSource
+:
 scroller
-are
-square
-so
-it
-suffices
-to
-compute
-/
-/
-one
-edge
-and
-use
-it
-for
-all
-the
-timelines
+}
+)
+;
+assert_equals
+(
+scrollTimeline
 .
+duration
+.
+unit
+"
+percent
+"
+"
+duration
+returns
+as
+a
+percent
+for
+scroll
+timelines
+"
+)
+;
+assert_equals
+(
+scrollTimeline
+.
+duration
+.
+value
+100
+"
+duration
+is
+100
+%
+"
+)
+;
+}
+"
+Scroll
+timeline
+correctly
+returns
+duration
+as
+100
+%
+"
+)
+;
+promise_test
+(
+async
+t
+=
+>
+{
+const
+scroller
+=
+setupScrollTimelineTest
+(
+)
+;
 const
 scrollerSize
 =
@@ -219,9 +273,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -240,9 +291,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -261,9 +309,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -282,9 +327,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -305,11 +347,12 @@ currentTime
 of
 0
 .
-assert_equals
+assert_percent_css_unit_value_approx_equals
 (
 blockScrollTimeline
 .
 currentTime
+0
 0
 '
 Unscrolled
@@ -318,11 +361,12 @@ timeline
 '
 )
 ;
-assert_equals
+assert_percent_css_unit_value_approx_equals
 (
 inlineScrollTimeline
 .
 currentTime
+0
 0
 '
 Unscrolled
@@ -331,11 +375,12 @@ timeline
 '
 )
 ;
-assert_equals
+assert_percent_css_unit_value_approx_equals
 (
 horizontalScrollTimeline
 .
 currentTime
+0
 0
 '
 Unscrolled
@@ -344,11 +389,12 @@ timeline
 '
 )
 ;
-assert_equals
+assert_percent_css_unit_value_approx_equals
 (
 verticalScrollTimeline
 .
 currentTime
+0
 0
 '
 Unscrolled
@@ -406,31 +452,17 @@ waitForNextFrame
 (
 )
 ;
-/
-/
-As
-noted
-above
-timeRange
-is
-mapped
-such
-that
-currentTime
-should
-be
-the
-/
-/
-scroll
-offset
-.
-assert_equals
+assert_percent_css_unit_value_approx_equals
 (
 blockScrollTimeline
 .
 currentTime
-50
+12
+.
+048
+0
+.
+01
 '
 Scrolled
 block
@@ -438,12 +470,17 @@ timeline
 '
 )
 ;
-assert_equals
+assert_percent_css_unit_value_approx_equals
 (
 inlineScrollTimeline
 .
 currentTime
-75
+18
+.
+072
+0
+.
+01
 '
 Scrolled
 inline
@@ -451,12 +488,17 @@ timeline
 '
 )
 ;
-assert_equals
+assert_percent_css_unit_value_approx_equals
 (
 horizontalScrollTimeline
 .
 currentTime
-75
+18
+.
+072
+0
+.
+01
 '
 Scrolled
 horizontal
@@ -464,12 +506,17 @@ timeline
 '
 )
 ;
-assert_equals
+assert_percent_css_unit_value_approx_equals
 (
 verticalScrollTimeline
 .
 currentTime
-50
+12
+.
+048
+0
+.
+01
 '
 Scrolled
 vertical
@@ -486,246 +533,8 @@ correct
 time
 based
 on
-scrolled
-amount
-'
-)
-;
-promise_test
-(
-async
-t
-=
->
-{
-/
-/
-It
-is
-difficult
-to
-calculate
-the
 scroll
-offset
-which
-results
-in
-an
-exact
-/
-/
-currentTime
-.
-Scrolling
-is
-calculated
-in
-integers
-which
-allows
-for
-the
-/
-/
-possibility
-of
-rounding
-and
-scrollbar
-widths
-differ
-between
-platforms
-/
-/
-which
-means
-it
-is
-not
-possible
-to
-ensure
-a
-divisible
-scroller
-size
-.
-Instead
-/
-/
-the
-scroller
-content
-is
-made
-large
-enough
-that
-rounding
-differences
-result
-/
-/
-in
-negligible
-deltas
-in
-the
-output
-value
-.
-const
-contentOverrides
-=
-new
-Map
-(
-[
-[
-'
-width
-'
-'
-1000px
-'
-]
-[
-'
-height
-'
-'
-1000px
-'
-]
-]
-)
-;
-const
-scroller
-=
-setupScrollTimelineTest
-(
-new
-Map
-(
-)
-contentOverrides
-)
-;
-const
-scrollTimeline
-=
-new
-ScrollTimeline
-(
-{
-scrollSource
-:
-scroller
-timeRange
-:
-100
-orientation
-:
-'
-block
-'
-}
-)
-;
-/
-/
-Mapping
-timeRange
-to
-100
-means
-the
-output
-is
-'
-percentage
-scrolled
-'
-so
-/
-/
-calculate
-where
-the
-50
-%
-scroll
-mark
-would
-be
-.
-const
-halfwayY
-=
-(
-scroller
-.
-scrollHeight
--
-scroller
-.
-clientHeight
-)
-/
-2
-;
-scroller
-.
-scrollTop
-=
-halfwayY
-;
-/
-/
-Wait
-for
-new
-animation
-frame
-which
-allows
-the
-timeline
-to
-compute
-new
-/
-/
-current
-time
-.
-await
-waitForNextFrame
-(
-)
-;
-assert_approx_equals
-(
-scrollTimeline
-.
-currentTime
-50
-0
-.
-5
-)
-;
-}
-'
-currentTime
-adjusts
-correctly
-for
-the
-timeRange
+progress
 '
 )
 ;
@@ -743,46 +552,6 @@ setupScrollTimelineTest
 (
 )
 ;
-/
-/
-Set
-the
-timeRange
-such
-that
-currentTime
-maps
-directly
-to
-the
-value
-/
-/
-scrolled
-.
-The
-contents
-and
-scroller
-are
-square
-so
-it
-suffices
-to
-compute
-/
-/
-one
-edge
-and
-use
-it
-for
-all
-the
-timelines
-.
 const
 scrollerSize
 =
@@ -804,9 +573,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -838,9 +604,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -872,9 +635,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -934,11 +694,12 @@ than
 the
 startScrollOffset
 .
-assert_equals
+assert_percent_css_unit_value_approx_equals
 (
 lengthScrollTimeline
 .
 currentTime
+0
 0
 '
 Unscrolled
@@ -969,11 +730,12 @@ phase
 '
 )
 ;
-assert_equals
+assert_percent_css_unit_value_approx_equals
 (
 percentageScrollTimeline
 .
 currentTime
+0
 0
 '
 Unscrolled
@@ -1004,11 +766,12 @@ phase
 '
 )
 ;
-assert_equals
+assert_percent_css_unit_value_approx_equals
 (
 calcScrollTimeline
 .
 currentTime
+0
 0
 '
 Unscrolled
@@ -1078,11 +841,12 @@ waitForNextFrame
 (
 )
 ;
-assert_equals
+assert_percent_css_unit_value_approx_equals
 (
 lengthScrollTimeline
 .
 currentTime
+0
 0
 '
 Length
@@ -1133,11 +897,12 @@ waitForNextFrame
 (
 )
 ;
-assert_equals
+assert_percent_css_unit_value_approx_equals
 (
 lengthScrollTimeline
 .
 currentTime
+0
 0
 '
 Length
@@ -1185,7 +950,7 @@ waitForNextFrame
 (
 )
 ;
-assert_times_equal
+assert_percent_css_unit_value_approx_equals
 (
 lengthScrollTimeline
 .
@@ -1195,8 +960,11 @@ calculateCurrentTime
 50
 20
 scrollerSize
-scrollerSize
+100
 )
+0
+.
+01
 '
 Length
 -
@@ -1256,11 +1024,12 @@ waitForNextFrame
 (
 )
 ;
-assert_equals
+assert_percent_css_unit_value_approx_equals
 (
 percentageScrollTimeline
 .
 currentTime
+0
 0
 '
 Percentage
@@ -1315,11 +1084,12 @@ waitForNextFrame
 (
 )
 ;
-assert_equals
+assert_percent_css_unit_value_approx_equals
 (
 percentageScrollTimeline
 .
 currentTime
+0
 0
 '
 Percentage
@@ -1371,7 +1141,7 @@ waitForNextFrame
 (
 )
 ;
-assert_times_equal
+assert_percent_css_unit_value_approx_equals
 (
 percentageScrollTimeline
 .
@@ -1387,8 +1157,11 @@ scrollTop
 *
 scrollerSize
 scrollerSize
-scrollerSize
+100
 )
+0
+.
+01
 '
 Percentage
 -
@@ -1453,11 +1226,12 @@ waitForNextFrame
 (
 )
 ;
-assert_equals
+assert_percent_css_unit_value_approx_equals
 (
 calcScrollTimeline
 .
 currentTime
+0
 0
 '
 Calc
@@ -1511,11 +1285,12 @@ waitForNextFrame
 (
 )
 ;
-assert_equals
+assert_percent_css_unit_value_approx_equals
 (
 calcScrollTimeline
 .
 currentTime
+0
 0
 '
 Calc
@@ -1567,7 +1342,7 @@ waitForNextFrame
 (
 )
 ;
-assert_times_equal
+assert_percent_css_unit_value_approx_equals
 (
 calcScrollTimeline
 .
@@ -1585,8 +1360,11 @@ scrollerSize
 -
 5
 scrollerSize
-scrollerSize
+100
 )
+0
+.
+01
 '
 Calc
 -
@@ -1645,46 +1423,6 @@ setupScrollTimelineTest
 (
 )
 ;
-/
-/
-Set
-the
-timeRange
-such
-that
-currentTime
-maps
-directly
-to
-the
-value
-/
-/
-scrolled
-.
-The
-contents
-and
-scroller
-are
-square
-so
-it
-suffices
-to
-compute
-/
-/
-one
-edge
-and
-use
-it
-for
-all
-the
-timelines
-.
 const
 scrollerSize
 =
@@ -1735,9 +1473,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -1756,9 +1491,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -1787,9 +1519,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -1818,9 +1547,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -1869,7 +1595,7 @@ scroller
 scrollTop
 0
 scrollerSize
-scrollerSize
+100
 )
 ;
 /
@@ -1896,12 +1622,15 @@ waitForNextFrame
 (
 )
 ;
-assert_times_equal
+assert_percent_css_unit_value_approx_equals
 (
 inclusiveAutoScrollTimeline
 .
 currentTime
 expectedCurrentTime
+0
+.
+01
 '
 Inclusive
 auto
@@ -1913,12 +1642,18 @@ point
 '
 )
 ;
-assert_times_equal
+assert_percent_css_unit_value_approx_equals
 (
 inclusiveLengthScrollTimeline
 .
 currentTime
 expectedCurrentTime
+0
+.
+01
+0
+.
+01
 '
 Inclusive
 length
@@ -1932,12 +1667,15 @@ point
 '
 )
 ;
-assert_times_equal
+assert_percent_css_unit_value_approx_equals
 (
 inclusivePercentageScrollTimeline
 .
 currentTime
 expectedCurrentTime
+0
+.
+01
 '
 Inclusive
 percentage
@@ -1951,12 +1689,15 @@ point
 '
 )
 ;
-assert_times_equal
+assert_percent_css_unit_value_approx_equals
 (
 inclusiveCalcScrollTimeline
 .
 currentTime
 expectedCurrentTime
+0
+.
+01
 '
 Inclusive
 calc
@@ -1997,46 +1738,6 @@ setupScrollTimelineTest
 (
 )
 ;
-/
-/
-Set
-the
-timeRange
-such
-that
-currentTime
-maps
-directly
-to
-the
-value
-/
-/
-scrolled
-.
-The
-contents
-and
-scroller
-are
-square
-so
-it
-suffices
-to
-compute
-/
-/
-one
-edge
-and
-use
-it
-for
-all
-the
-timelines
-.
 const
 scrollerSize
 =
@@ -2058,9 +1759,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -2091,9 +1789,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -2122,9 +1817,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -2192,14 +1884,15 @@ waitForNextFrame
 (
 )
 ;
-assert_equals
+assert_percent_css_unit_value_approx_equals
 (
 lengthScrollTimeline
 .
 currentTime
-lengthScrollTimeline
+100
+0
 .
-timeRange
+01
 '
 Length
 -
@@ -2248,14 +1941,15 @@ waitForNextFrame
 (
 )
 ;
-assert_equals
+assert_percent_css_unit_value_approx_equals
 (
 lengthScrollTimeline
 .
 currentTime
-lengthScrollTimeline
+100
+0
 .
-timeRange
+01
 '
 Length
 -
@@ -2304,7 +1998,7 @@ waitForNextFrame
 (
 )
 ;
-assert_times_equal
+assert_percent_css_unit_value_approx_equals
 (
 lengthScrollTimeline
 .
@@ -2318,8 +2012,11 @@ scrollerSize
 scrollerSize
 -
 20
-scrollerSize
+100
 )
+0
+.
+01
 '
 Length
 -
@@ -2379,14 +2076,15 @@ waitForNextFrame
 (
 )
 ;
-assert_equals
+assert_percent_css_unit_value_approx_equals
 (
 percentageScrollTimeline
 .
 currentTime
-percentageScrollTimeline
+100
+0
 .
-timeRange
+01
 '
 Percentage
 -
@@ -2437,14 +2135,15 @@ waitForNextFrame
 (
 )
 ;
-assert_equals
+assert_percent_css_unit_value_approx_equals
 (
 percentageScrollTimeline
 .
 currentTime
-percentageScrollTimeline
+100
+0
 .
-timeRange
+01
 '
 Percentage
 -
@@ -2495,7 +2194,7 @@ waitForNextFrame
 (
 )
 ;
-assert_times_equal
+assert_percent_css_unit_value_approx_equals
 (
 percentageScrollTimeline
 .
@@ -2511,8 +2210,11 @@ scrollTop
 8
 *
 scrollerSize
-scrollerSize
+100
 )
+0
+.
+01
 '
 Percentage
 -
@@ -2574,14 +2276,15 @@ waitForNextFrame
 (
 )
 ;
-assert_equals
+assert_percent_css_unit_value_approx_equals
 (
 calcScrollTimeline
 .
 currentTime
-calcScrollTimeline
+100
+0
 .
-timeRange
+01
 '
 Calc
 -
@@ -2634,14 +2337,15 @@ waitForNextFrame
 (
 )
 ;
-assert_equals
+assert_percent_css_unit_value_approx_equals
 (
 calcScrollTimeline
 .
 currentTime
-calcScrollTimeline
+100
+0
 .
-timeRange
+01
 '
 Calc
 -
@@ -2692,7 +2396,7 @@ waitForNextFrame
 (
 )
 ;
-assert_times_equal
+assert_percent_css_unit_value_approx_equals
 (
 calcScrollTimeline
 .
@@ -2710,8 +2414,11 @@ scrollTop
 scrollerSize
 +
 5
-scrollerSize
+100
 )
+0
+.
+01
 '
 Calc
 -
@@ -2770,46 +2477,6 @@ setupScrollTimelineTest
 (
 )
 ;
-/
-/
-Set
-the
-timeRange
-such
-that
-currentTime
-maps
-directly
-to
-the
-value
-/
-/
-scrolled
-.
-The
-contents
-and
-scroller
-are
-square
-so
-it
-suffices
-to
-compute
-/
-/
-one
-edge
-and
-use
-it
-for
-all
-the
-timelines
-.
 const
 scrollerSize
 =
@@ -2831,9 +2498,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -2890,7 +2554,7 @@ waitForNextFrame
 (
 )
 ;
-assert_times_equal
+assert_percent_css_unit_value_approx_equals
 (
 scrollTimeline
 .
@@ -2902,8 +2566,11 @@ calculateCurrentTime
 scrollerSize
 -
 50
-scrollerSize
+100
 )
+0
+.
+01
 )
 ;
 }
@@ -2932,57 +2599,6 @@ setupScrollTimelineTest
 (
 )
 ;
-/
-/
-Set
-the
-timeRange
-such
-that
-currentTime
-maps
-directly
-to
-the
-value
-/
-/
-scrolled
-.
-The
-contents
-and
-scroller
-are
-square
-so
-it
-suffices
-to
-compute
-/
-/
-one
-edge
-and
-use
-it
-for
-all
-the
-timelines
-.
-const
-scrollerSize
-=
-scroller
-.
-scrollHeight
--
-scroller
-.
-clientHeight
-;
 const
 scrollTimeline
 =
@@ -2993,9 +2609,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -3050,14 +2663,15 @@ waitForNextFrame
 (
 )
 ;
-assert_equals
+assert_percent_css_unit_value_approx_equals
 (
 scrollTimeline
 .
 currentTime
-scrollTimeline
+100
+0
 .
-timeRange
+01
 )
 ;
 }
@@ -3086,57 +2700,6 @@ setupScrollTimelineTest
 (
 )
 ;
-/
-/
-Set
-the
-timeRange
-such
-that
-currentTime
-maps
-directly
-to
-the
-value
-/
-/
-scrolled
-.
-The
-contents
-and
-scroller
-are
-square
-so
-it
-suffices
-to
-compute
-/
-/
-one
-edge
-and
-use
-it
-for
-all
-the
-timelines
-.
-const
-scrollerSize
-=
-scroller
-.
-scrollHeight
--
-scroller
-.
-clientHeight
-;
 const
 scrollTimeline
 =
@@ -3147,9 +2710,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -3204,12 +2764,15 @@ waitForNextFrame
 (
 )
 ;
-assert_equals
+assert_percent_css_unit_value_approx_equals
 (
 scrollTimeline
 .
 currentTime
 0
+0
+.
+01
 )
 ;
 scroller
@@ -3223,14 +2786,15 @@ waitForNextFrame
 (
 )
 ;
-assert_equals
+assert_percent_css_unit_value_approx_equals
 (
 scrollTimeline
 .
 currentTime
-scrollTimeline
+100
+0
 .
-timeRange
+01
 )
 ;
 }
@@ -3241,6 +2805,581 @@ startScrollOffset
 >
 endScrollOffset
 correctly
+'
+)
+;
+promise_test
+(
+async
+t
+=
+>
+{
+const
+scroller
+=
+setupScrollTimelineTest
+(
+)
+;
+const
+scrollTimeline
+=
+new
+ScrollTimeline
+(
+{
+scrollSource
+:
+scroller
+orientation
+:
+'
+block
+'
+scrollOffsets
+:
+[
+CSS
+.
+px
+(
+10
+)
+CSS
+.
+px
+(
+20
+)
+CSS
+.
+px
+(
+40
+)
+CSS
+.
+px
+(
+70
+)
+CSS
+.
+px
+(
+90
+)
+]
+}
+)
+;
+var
+offset
+=
+0
+;
+var
+w
+=
+1
+/
+4
+;
+/
+/
+offset
+weight
+var
+p
+=
+0
+;
+/
+/
+progress
+within
+the
+offset
+scroller
+.
+scrollTop
+=
+10
+;
+/
+/
+Wait
+for
+new
+animation
+frame
+which
+allows
+the
+timeline
+to
+compute
+new
+/
+/
+current
+time
+.
+await
+waitForNextFrame
+(
+)
+;
+assert_percent_css_unit_value_approx_equals
+(
+scrollTimeline
+.
+currentTime
+(
+offset
++
+p
+)
+*
+w
+*
+100
+0
+.
+01
+"
+current
+time
+calculation
+when
+scroll
+=
+"
++
+scroller
+.
+scrollTop
+)
+;
+p
+=
+(
+12
+-
+10
+)
+/
+(
+20
+-
+10
+)
+;
+scroller
+.
+scrollTop
+=
+12
+;
+await
+waitForNextFrame
+(
+)
+;
+assert_percent_css_unit_value_approx_equals
+(
+scrollTimeline
+.
+currentTime
+(
+offset
++
+p
+)
+*
+w
+*
+100
+0
+.
+01
+"
+current
+time
+calculation
+when
+scroll
+=
+"
++
+scroller
+.
+scrollTop
+)
+;
+offset
+=
+1
+;
+p
+=
+0
+;
+scroller
+.
+scrollTop
+=
+20
+;
+await
+waitForNextFrame
+(
+)
+;
+assert_percent_css_unit_value_approx_equals
+(
+scrollTimeline
+.
+currentTime
+(
+offset
++
+p
+)
+*
+w
+*
+100
+0
+.
+01
+"
+current
+time
+calculation
+when
+scroll
+=
+"
++
+scroller
+.
+scrollTop
+)
+;
+p
+=
+(
+35
+-
+20
+)
+/
+(
+40
+-
+20
+)
+;
+scroller
+.
+scrollTop
+=
+35
+;
+await
+waitForNextFrame
+(
+)
+;
+assert_percent_css_unit_value_approx_equals
+(
+scrollTimeline
+.
+currentTime
+(
+offset
++
+p
+)
+*
+w
+*
+100
+0
+.
+01
+"
+current
+time
+calculation
+when
+scroll
+=
+"
++
+scroller
+.
+scrollTop
+)
+;
+offset
+=
+2
+;
+p
+=
+0
+;
+scroller
+.
+scrollTop
+=
+40
+;
+await
+waitForNextFrame
+(
+)
+;
+assert_percent_css_unit_value_approx_equals
+(
+scrollTimeline
+.
+currentTime
+(
+offset
++
+p
+)
+*
+w
+*
+100
+0
+.
+01
+"
+current
+time
+calculation
+when
+scroll
+=
+"
++
+scroller
+.
+scrollTop
+)
+;
+p
+=
+(
+60
+-
+40
+)
+/
+(
+70
+-
+40
+)
+;
+scroller
+.
+scrollTop
+=
+60
+;
+await
+waitForNextFrame
+(
+)
+;
+assert_percent_css_unit_value_approx_equals
+(
+scrollTimeline
+.
+currentTime
+(
+offset
++
+p
+)
+*
+w
+*
+100
+0
+.
+01
+"
+current
+time
+calculation
+when
+scroll
+=
+"
++
+scroller
+.
+scrollTop
+)
+;
+offset
+=
+3
+;
+p
+=
+0
+;
+scroller
+.
+scrollTop
+=
+70
+;
+await
+waitForNextFrame
+(
+)
+;
+assert_percent_css_unit_value_approx_equals
+(
+scrollTimeline
+.
+currentTime
+(
+offset
++
+p
+)
+*
+w
+*
+100
+0
+.
+01
+"
+current
+time
+calculation
+when
+scroll
+=
+"
++
+scroller
+.
+scrollTop
+)
+;
+p
+=
+(
+80
+-
+70
+)
+/
+(
+90
+-
+70
+)
+;
+scroller
+.
+scrollTop
+=
+80
+;
+await
+waitForNextFrame
+(
+)
+;
+assert_percent_css_unit_value_approx_equals
+(
+scrollTimeline
+.
+currentTime
+(
+offset
++
+p
+)
+*
+w
+*
+100
+0
+.
+01
+"
+current
+time
+calculation
+when
+scroll
+=
+"
++
+scroller
+.
+scrollTop
+)
+;
+scroller
+.
+scrollTop
+=
+90
+;
+await
+waitForNextFrame
+(
+)
+;
+assert_percent_css_unit_value_approx_equals
+(
+scrollTimeline
+.
+currentTime
+100
+0
+.
+01
+"
+current
+time
+calculation
+when
+scroll
+=
+"
++
+scroller
+.
+scrollTop
+)
+;
+}
+'
+currentTime
+calculations
+when
+multiple
+scroll
+offsets
+are
+specified
 '
 )
 ;
