--- a/testing/web-platform/tests/scroll-animations/finish-animation.html
+++ b/testing/web-platform/tests/scroll-animations/finish-animation.html
@@ -187,6 +187,67 @@ use
 strict
 '
 ;
+/
+/
+TODO
+(
+crbug
+.
+com
+/
+1216655
+)
+:
+Remove
+time
+range
+.
+Once
+time
+range
+is
+removed
+all
+/
+/
+functions
+that
+include
+.
+.
+.
+WithTimeRange
+(
+)
+should
+be
+replaced
+with
+the
+same
+/
+/
+function
+but
+without
+that
+ending
+.
+For
+example
+:
+/
+/
+/
+/
+createScrollLinkedAnimationWithTimeRange
+(
+)
+=
+>
+createScrollLinkedAnimation
+(
+)
 promise_test
 (
 async
@@ -197,7 +258,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -286,93 +347,6 @@ createScrollLinkedAnimation
 t
 )
 ;
-animation
-.
-effect
-.
-updateTiming
-(
-{
-iterations
-:
-Infinity
-}
-)
-;
-animation
-.
-play
-(
-)
-;
-/
-/
-Wait
-for
-new
-animation
-frame
-which
-allows
-the
-timeline
-to
-compute
-new
-/
-/
-current
-time
-.
-await
-waitForNextFrame
-(
-)
-;
-assert_throws_dom
-(
-'
-InvalidStateError
-'
-(
-)
-=
->
-{
-animation
-.
-finish
-(
-)
-;
-}
-)
-;
-}
-'
-Finishing
-an
-infinite
-animation
-throws
-'
-)
-;
-promise_test
-(
-async
-t
-=
->
-{
-const
-animation
-=
-createScrollLinkedAnimation
-(
-t
-)
-;
 /
 /
 Wait
@@ -409,12 +383,15 @@ finish
 (
 )
 ;
-assert_times_equal
+assert_percent_css_unit_value_approx_equals
 (
 animation
 .
 currentTime
-1000
+100
+0
+.
+01
 '
 After
 finishing
@@ -459,7 +436,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -522,7 +499,7 @@ finish
 (
 )
 ;
-assert_time_equals_literal
+assert_times_equal
 (
 animation
 .
@@ -584,10 +561,30 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
+;
+const
+scroller
+=
+animation
+.
+timeline
+.
+scrollSource
+;
+const
+maxScroll
+=
+scroller
+.
+scrollHeight
+-
+scroller
+.
+clientHeight
 ;
 /
 /
@@ -619,11 +616,11 @@ play
 (
 )
 ;
-animation
+scroller
 .
-currentTime
+scrollTop
 =
-1000
+maxScroll
 ;
 await
 animation
@@ -691,7 +688,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -757,7 +754,7 @@ finish
 (
 )
 ;
-assert_equals
+assert_times_equal
 (
 animation
 .
@@ -818,7 +815,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -1081,12 +1078,15 @@ finished
 '
 )
 ;
-assert_times_equal
+assert_percent_css_unit_value_approx_equals
 (
 animation
 .
 currentTime
-1000
+100
+0
+.
+1
 '
 The
 current
@@ -1678,18 +1678,43 @@ finished
 '
 )
 ;
+/
+/
+Divide
+by
+1000
+to
+convert
+from
+milliseconds
+to
+seconds
+which
+represent
+/
+/
+percentage
+values
+until
+changed
+internally
+.
 assert_times_equal
 (
 animation
 .
 startTime
+/
+1000
 animation
 .
 timeline
 .
 currentTime
+.
+value
 -
-1000
+100
 '
 The
 start
@@ -1704,12 +1729,15 @@ set
 '
 )
 ;
-assert_times_equal
+assert_percent_css_unit_value_approx_equals
 (
 animation
 .
 currentTime
-1000
+100
+0
+.
+1
 '
 Hold
 time
@@ -1862,12 +1890,15 @@ finished
 '
 )
 ;
-assert_equals
+assert_percent_css_unit_value_approx_equals
 (
 animation
 .
 currentTime
-1000
+100
+0
+.
+1
 '
 The
 current
@@ -1886,13 +1917,36 @@ state
 '
 )
 ;
+/
+/
+Divide
+by
+1000
+to
+convert
+from
+milliseconds
+to
+seconds
+which
+represent
+/
+/
+percentage
+values
+until
+changed
+internally
+.
 assert_equals
 (
 animation
 .
 startTime
+/
+1000
 -
-750
+75
 '
 The
 start
@@ -1913,7 +1967,9 @@ assert_equals
 finishEvent
 .
 currentTime
+/
 1000
+100
 '
 event
 .
@@ -1932,7 +1988,9 @@ assert_equals
 finishEvent
 .
 timelineTime
-250
+/
+1000
+25
 '
 event
 .
@@ -2200,12 +2258,15 @@ finished
 '
 )
 ;
-assert_equals
+assert_percent_css_unit_value_approx_equals
 (
 animation
 .
 currentTime
-1000
+100
+0
+.
+1
 '
 The
 current
@@ -2223,13 +2284,36 @@ state
 '
 )
 ;
+/
+/
+Divide
+by
+1000
+to
+convert
+from
+milliseconds
+to
+seconds
+which
+represent
+/
+/
+percentage
+values
+until
+changed
+internally
+.
 assert_equals
 (
 animation
 .
 startTime
+/
+1000
 -
-750
+75
 '
 The
 start
@@ -2250,7 +2334,9 @@ assert_equals
 finishEvent
 .
 currentTime
+/
 1000
+100
 '
 event
 .
@@ -2269,7 +2355,9 @@ assert_equals
 finishEvent
 .
 timelineTime
-250
+/
+1000
+25
 '
 event
 .
@@ -2545,18 +2633,43 @@ finished
 '
 )
 ;
+/
+/
+Divide
+by
+1000
+to
+convert
+from
+milliseconds
+to
+seconds
+which
+represent
+/
+/
+percentage
+values
+until
+changed
+internally
+.
 assert_times_equal
 (
 animation
 .
 startTime
+/
+1000
 animation
 .
 timeline
 .
 currentTime
+.
+value
 -
-1000
+100
 '
 The
 start
@@ -2594,7 +2707,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -2779,7 +2892,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -3165,12 +3278,15 @@ playbackRate
 2
 )
 ;
-assert_times_equal
+assert_percent_css_unit_value_approx_equals
 (
 animation
 .
 currentTime
-1000
+100
+0
+.
+1
 )
 ;
 }
@@ -3284,249 +3400,6 @@ playback
 rate
 is
 zero
-'
-)
-;
-promise_test
-(
-async
-t
-=
->
-{
-const
-animation
-=
-createScrollLinkedAnimation
-(
-t
-)
-;
-animation
-.
-effect
-.
-updateTiming
-(
-{
-iterations
-:
-Infinity
-}
-)
-;
-/
-/
-Wait
-for
-new
-animation
-frame
-which
-allows
-the
-timeline
-to
-compute
-new
-/
-/
-current
-time
-.
-await
-waitForNextFrame
-(
-)
-;
-animation
-.
-play
-(
-)
-;
-animation
-.
-currentTime
-=
-500
-;
-animation
-.
-playbackRate
-=
--
-1
-;
-await
-animation
-.
-ready
-;
-animation
-.
-updatePlaybackRate
-(
-1
-)
-;
-assert_throws_dom
-(
-'
-InvalidStateError
-'
-(
-)
-=
->
-{
-animation
-.
-finish
-(
-)
-;
-}
-)
-;
-}
-'
-An
-exception
-should
-be
-thrown
-when
-finishing
-if
-the
-effective
-playback
-rate
-'
-+
-'
-is
-positive
-and
-the
-target
-effect
-end
-is
-infinity
-'
-)
-;
-promise_test
-(
-async
-t
-=
->
-{
-const
-animation
-=
-createScrollLinkedAnimation
-(
-t
-)
-;
-animation
-.
-effect
-.
-updateTiming
-(
-{
-iterations
-:
-Infinity
-}
-)
-;
-/
-/
-Wait
-for
-new
-animation
-frame
-which
-allows
-the
-timeline
-to
-compute
-new
-/
-/
-current
-time
-.
-await
-waitForNextFrame
-(
-)
-;
-animation
-.
-play
-(
-)
-;
-await
-animation
-.
-ready
-;
-animation
-.
-updatePlaybackRate
-(
--
-1
-)
-;
-animation
-.
-finish
-(
-)
-;
-/
-/
-Should
-not
-have
-thrown
-}
-'
-An
-exception
-is
-NOT
-thrown
-when
-finishing
-if
-the
-effective
-playback
-rate
-'
-+
-'
-is
-negative
-and
-the
-target
-effect
-end
-is
-infinity
 '
 )
 ;
