--- a/testing/web-platform/tests/scroll-animations/scroll-animation-effect-phases.tentative.html
+++ b/testing/web-platform/tests/scroll-animations/scroll-animation-effect-phases.tentative.html
@@ -191,6 +191,67 @@ strict
 ;
 /
 /
+TODO
+(
+crbug
+.
+com
+/
+1216655
+)
+:
+Remove
+time
+range
+.
+Once
+time
+range
+is
+removed
+all
+/
+/
+functions
+that
+include
+.
+.
+.
+WithTimeRange
+(
+)
+should
+be
+replaced
+with
+the
+same
+/
+/
+function
+but
+without
+that
+ending
+.
+For
+example
+:
+/
+/
+/
+/
+createScrollLinkedAnimationWithTimeRange
+(
+)
+=
+>
+createScrollLinkedAnimation
+(
+)
+/
+/
 Test
 cases
 are
@@ -249,7 +310,9 @@ AFTER
 time
 :
 0
-timeRange
+timeline
+.
+duration
 /
 /
 1
@@ -1181,7 +1244,7 @@ t
 const
 timeline
 =
-createScrollTimelineWithOffsets
+createScrollTimelineWithOffsetsWithTimeRange
 (
 t
 CSS
@@ -1567,7 +1630,7 @@ createKeyframeEffectOpacity
 (
 t
 )
-createScrollTimelineWithOffsets
+createScrollTimelineWithOffsetsWithTimeRange
 (
 t
 CSS
@@ -1710,7 +1773,7 @@ createKeyframeEffectOpacity
 (
 t
 )
-createScrollTimelineWithOffsets
+createScrollTimelineWithOffsetsWithTimeRange
 (
 t
 CSS
@@ -1938,7 +2001,7 @@ createKeyframeEffectOpacity
 (
 t
 )
-createScrollTimelineWithOffsets
+createScrollTimelineWithOffsetsWithTimeRange
 (
 t
 CSS
@@ -2291,7 +2354,7 @@ createKeyframeEffectOpacity
 (
 t
 )
-createScrollTimelineWithOffsets
+createScrollTimelineWithOffsetsWithTimeRange
 (
 t
 CSS
