--- a/testing/web-platform/tests/scroll-animations/scroll-animation-inactive-timeline.html
+++ b/testing/web-platform/tests/scroll-animations/scroll-animation-inactive-timeline.html
@@ -155,6 +155,67 @@ use
 strict
 '
 ;
+/
+/
+TODO
+(
+crbug
+.
+com
+/
+1216655
+)
+:
+Remove
+time
+range
+.
+Once
+time
+range
+is
+removed
+all
+/
+/
+functions
+that
+include
+.
+.
+.
+WithTimeRange
+(
+)
+should
+be
+replaced
+with
+the
+same
+/
+/
+function
+but
+without
+that
+ending
+.
+For
+example
+:
+/
+/
+/
+/
+createScrollLinkedAnimationWithTimeRange
+(
+)
+=
+>
+createScrollLinkedAnimation
+(
+)
 promise_test
 (
 async
@@ -165,7 +226,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -374,7 +435,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -582,7 +643,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -876,7 +937,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
