--- a/testing/web-platform/tests/scroll-animations/scroll-animation.html
+++ b/testing/web-platform/tests/scroll-animations/scroll-animation.html
@@ -297,12 +297,15 @@ in
 Pending
 state
 .
-assert_equals
+assert_percent_css_unit_value_approx_equals
 (
 animation
 .
 currentTime
 0
+0
+.
+01
 "
 The
 current
@@ -352,12 +355,15 @@ in
 Playing
 state
 .
-assert_equals
+assert_percent_css_unit_value_approx_equals
 (
 animation
 .
 currentTime
 0
+0
+.
+01
 "
 The
 current
@@ -415,7 +421,7 @@ scrollTop
 =
 0
 .
-2
+4
 *
 maxScroll
 ;
@@ -443,7 +449,7 @@ waitForNextFrame
 (
 )
 ;
-assert_equals
+assert_css_numberish_equals
 (
 animation
 .
@@ -479,16 +485,44 @@ getComputedTiming
 (
 )
 .
-localTime
+progress
+/
+/
+Division
+by
+100
+is
+temporary
+it
+will
+be
+removed
+when
+progress
+returns
+/
+/
+a
+CSSNumericValue
+instead
+of
+a
+double
+0
+-
+1
 animation
 .
 timeline
 .
 currentTime
+.
+value
+/
+100
 '
 Effect
-local
-time
+progress
 corresponds
 to
 the
@@ -661,7 +695,7 @@ in
 Pending
 state
 .
-assert_equals
+assert_css_numberish_equals
 (
 animation
 .
@@ -722,7 +756,7 @@ in
 Playing
 state
 .
-assert_equals
+assert_css_numberish_equals
 (
 animation
 .
@@ -857,7 +891,7 @@ scrollTop
 =
 0
 .
-2
+4
 *
 maxScroll
 ;
@@ -997,7 +1031,7 @@ in
 Pending
 state
 .
-assert_equals
+assert_css_numberish_equals
 (
 animation1
 .
@@ -1046,7 +1080,7 @@ state
 "
 )
 ;
-assert_equals
+assert_css_numberish_equals
 (
 animation2
 .
@@ -1117,7 +1151,7 @@ in
 Playing
 state
 .
-assert_equals
+assert_css_numberish_equals
 (
 animation1
 .
@@ -1159,7 +1193,7 @@ state
 "
 )
 ;
-assert_equals
+assert_css_numberish_equals
 (
 animation2
 .
@@ -1261,15 +1295,6 @@ scroller
 .
 clientHeight
 ;
-const
-timeRange
-=
-animation
-.
-timeline
-.
-timeRange
-;
 animation
 .
 play
@@ -1300,6 +1325,49 @@ await
 animation
 .
 finished
+;
+assert_equals
+(
+animation
+.
+playState
+'
+finished
+'
+'
+Animation
+state
+is
+in
+finished
+state
+.
+'
+)
+;
+assert_percent_css_unit_value_approx_equals
+(
+animation
+.
+currentTime
+100
+0
+.
+01
+'
+Animation
+current
+time
+is
+at
+100
+%
+on
+reverse
+scrolling
+.
+'
+)
 ;
 /
 /
@@ -1372,16 +1440,15 @@ scrolling
 '
 )
 ;
-assert_equals
+assert_percent_css_unit_value_approx_equals
 (
 animation
 .
 currentTime
+20
 0
 .
-2
-*
-timeRange
+01
 '
 Animation
 current
