--- a/testing/web-platform/tests/scroll-animations/scroll-timeline-invalidation.html
+++ b/testing/web-platform/tests/scroll-animations/scroll-timeline-invalidation.html
@@ -198,6 +198,11 @@ createScrollLinkedAnimation
 t
 )
 ;
+const
+effect_duration
+=
+350
+;
 animation
 .
 effect
@@ -207,7 +212,7 @@ updateTiming
 {
 duration
 :
-350
+effect_duration
 }
 )
 ;
@@ -220,7 +225,7 @@ timeline
 .
 scrollSource
 ;
-const
+let
 maxScroll
 =
 scroller
@@ -240,6 +245,19 @@ scrollTop
 2
 *
 maxScroll
+;
+const
+initial_progress
+=
+(
+scroller
+.
+scrollTop
+/
+maxScroll
+)
+*
+100
 ;
 /
 /
@@ -278,10 +296,93 @@ ready
 ;
 /
 /
-Change
+Animation
+current
+time
+is
+at
+20
+%
+because
+scroller
+was
+scrolled
+to
+20
+%
+/
+/
+assert_equals
+(
+animation
+.
+currentTime
+.
+value
+20
+)
+;
+assert_equals
+(
+animation
+.
+currentTime
+.
+value
+20
+)
+;
+assert_equals
+(
+scroller
+.
+scrollTop
+180
+)
+;
+assert_equals
+(
+maxScroll
+900
+)
+;
+/
+/
+Shrink
 scroller
 content
 size
+(
+from
+1000
+to
+500
+)
+.
+/
+/
+scroller
+.
+scrollTop
+maintains
+the
+same
+offset
+which
+means
+shrinking
+the
+/
+/
+content
+has
+the
+effect
+of
+skipping
+the
+animation
+forward
 .
 scroller
 .
@@ -295,44 +396,85 @@ height
 500px
 "
 ;
-await
-animation
-.
-finished
-;
-const
-newTime
+maxScroll
 =
-animation
+scroller
 .
-effect
+scrollHeight
+-
+scroller
 .
-getTiming
+clientHeight
+;
+assert_equals
+(
+scroller
+.
+scrollTop
+180
+)
+;
+assert_equals
+(
+maxScroll
+400
+)
+;
+await
+waitForNextFrame
 (
 )
-.
-duration
 ;
-assert_times_equal
+const
+expected_progress
+=
+(
+scroller
+.
+scrollTop
+/
+maxScroll
+)
+*
+100
+;
+assert_true
+(
+expected_progress
+>
+initial_progress
+)
+assert_equals
 (
 animation
 .
 currentTime
-newTime
-'
-Animation
-current
-time
-is
-updated
-after
-scroller
-invalidation
 .
-'
+value
+expected_progress
 )
 ;
-assert_times_equal
+/
+/
+45
+%
+assert_equals
+(
+animation
+.
+timeline
+.
+currentTime
+.
+value
+expected_progress
+)
+;
+/
+/
+45
+%
+assert_equals
 (
 animation
 .
@@ -343,20 +485,15 @@ getComputedTiming
 )
 .
 localTime
-newTime
-'
-Effect
-local
-time
-is
-updated
-after
-scroller
-invalidation
 .
-'
+value
+expected_progress
 )
 ;
+/
+/
+45
+%
 }
 '
 Animation
@@ -417,7 +554,7 @@ timeline
 .
 scrollSource
 ;
-const
+let
 maxScroll
 =
 scroller
@@ -428,15 +565,32 @@ scroller
 .
 clientHeight
 ;
-scroller
-.
-scrollTop
+const
+scrollOffset
 =
 0
 .
 2
 *
 maxScroll
+scroller
+.
+scrollTop
+=
+scrollOffset
+;
+const
+initial_progress
+=
+(
+scroller
+.
+scrollTop
+/
+maxScroll
+)
+*
+100
 ;
 /
 /
@@ -475,6 +629,58 @@ ready
 ;
 /
 /
+Animation
+current
+time
+is
+at
+20
+%
+because
+scroller
+was
+scrolled
+to
+20
+%
+/
+/
+assert_equals
+(
+animation
+.
+currentTime
+.
+value
+20
+)
+;
+assert_equals
+(
+animation
+.
+currentTime
+.
+value
+20
+)
+;
+assert_equals
+(
+scroller
+.
+scrollTop
+scrollOffset
+)
+;
+assert_equals
+(
+maxScroll
+900
+)
+;
+/
+/
 Change
 scroller
 size
@@ -489,44 +695,86 @@ height
 500px
 "
 ;
-await
-animation
-.
-finished
-;
-const
-newTime
+maxScroll
 =
-animation
+scroller
 .
-effect
+scrollHeight
+-
+scroller
 .
-getTiming
+clientHeight
+;
+assert_equals
+(
+scroller
+.
+scrollTop
+scrollOffset
+)
+;
+assert_equals
+(
+maxScroll
+500
+)
+;
+await
+waitForNextFrame
 (
 )
-.
-duration
 ;
-assert_times_equal
+const
+expected_progress
+=
+(
+scroller
+.
+scrollTop
+/
+maxScroll
+)
+*
+100
+;
+assert_true
+(
+expected_progress
+>
+initial_progress
+)
+;
+assert_equals
 (
 animation
 .
 currentTime
-newTime
-'
-Animation
-current
-time
-is
-updated
-after
-scroller
-invalidation
 .
-'
+value
+expected_progress
 )
 ;
-assert_times_equal
+/
+/
+45
+%
+assert_equals
+(
+animation
+.
+timeline
+.
+currentTime
+.
+value
+expected_progress
+)
+;
+/
+/
+45
+%
+assert_equals
 (
 animation
 .
@@ -537,20 +785,15 @@ getComputedTiming
 )
 .
 localTime
-newTime
-'
-Effect
-local
-time
-is
-updated
-after
-scroller
-invalidation
 .
-'
+value
+expected_progress
 )
 ;
+/
+/
+45
+%
 }
 '
 Animation
@@ -712,7 +955,9 @@ assert_times_equal
 timeline
 .
 currentTime
-200
+.
+value
+20
 '
 Timeline
 current
@@ -736,9 +981,11 @@ assert_times_equal
 timeline
 .
 currentTime
-163
 .
-636
+value
+16
+.
+3636
 '
 Timeline
 current
