--- a/testing/web-platform/tests/scroll-animations/setting-playback-rate.html
+++ b/testing/web-platform/tests/scroll-animations/setting-playback-rate.html
@@ -190,6 +190,67 @@ use
 strict
 '
 ;
+/
+/
+TODO
+(
+crbug
+.
+com
+/
+1216655
+)
+:
+Remove
+time
+range
+.
+Once
+time
+range
+is
+removed
+all
+/
+/
+functions
+that
+include
+.
+.
+.
+WithTimeRange
+(
+)
+should
+be
+replaced
+with
+the
+same
+/
+/
+function
+but
+without
+that
+ending
+.
+For
+example
+:
+/
+/
+/
+/
+createScrollLinkedAnimationWithTimeRange
+(
+)
+=
+>
+createScrollLinkedAnimation
+(
+)
 promise_test
 (
 async
@@ -200,7 +261,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -325,7 +386,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -452,7 +513,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -602,7 +663,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -766,7 +827,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -932,7 +993,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -1069,7 +1130,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -1201,7 +1262,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -1281,7 +1342,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -1400,7 +1461,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -1502,7 +1563,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -1636,7 +1697,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -1878,7 +1939,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -2000,7 +2061,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
