--- a/testing/web-platform/tests/scroll-animations/setting-timeline.tentative.html
+++ b/testing/web-platform/tests/scroll-animations/setting-timeline.tentative.html
@@ -225,6 +225,67 @@ use
 strict
 '
 ;
+/
+/
+TODO
+(
+crbug
+.
+com
+/
+1216655
+)
+:
+Remove
+time
+range
+.
+Once
+time
+range
+is
+removed
+all
+/
+/
+functions
+that
+include
+.
+.
+.
+WithTimeRange
+(
+)
+should
+be
+replaced
+with
+the
+same
+/
+/
+function
+but
+without
+that
+ending
+.
+For
+example
+:
+/
+/
+/
+/
+createScrollLinkedAnimationWithTimeRange
+(
+)
+=
+>
+createScrollLinkedAnimation
+(
+)
 function
 createAnimation
 (
@@ -368,6 +429,8 @@ animation
 timeline
 .
 currentTime
+.
+value
 timeline_current_time
 '
 Timeline
@@ -409,6 +472,8 @@ assert_times_equal
 animation
 .
 currentTime
+.
+value
 animation_current_time
 '
 Animation
@@ -447,6 +512,8 @@ assert_times_equal
 animation
 .
 currentTime
+.
+value
 animation_current_time
 '
 Animation
@@ -523,8 +590,8 @@ running
 assert_scroll_synced_times
 (
 animation
-100
-100
+10
+10
 )
 ;
 }
@@ -622,7 +689,7 @@ paused
 assert_paused_times
 (
 animation
-100
+10
 0
 )
 ;
@@ -648,7 +715,7 @@ paused
 assert_paused_times
 (
 animation
-200
+20
 0
 )
 ;
@@ -666,8 +733,8 @@ ready
 assert_scroll_synced_times
 (
 animation
-200
-200
+20
+20
 )
 ;
 }
@@ -761,8 +828,8 @@ running
 assert_scroll_synced_times
 (
 animation
-100
-900
+10
+90
 )
 ;
 }
@@ -859,8 +926,8 @@ running
 assert_scroll_synced_times
 (
 animation
-100
-100
+10
+10
 )
 ;
 }
@@ -957,7 +1024,7 @@ paused
 assert_paused_times
 (
 animation
-100
+10
 0
 )
 ;
@@ -975,8 +1042,8 @@ ready
 assert_scroll_synced_times
 (
 animation
-100
-100
+10
+10
 )
 ;
 }
@@ -1081,8 +1148,8 @@ paused
 assert_paused_times
 (
 animation
+10
 100
-1000
 )
 ;
 animation
@@ -1099,8 +1166,8 @@ ready
 assert_scroll_synced_times
 (
 animation
-100
-900
+10
+90
 )
 ;
 }
@@ -1154,7 +1221,7 @@ t
 const
 scrollTimeline
 =
-createScrollTimeline
+createScrollTimelineWithTimeRange
 (
 t
 )
@@ -1234,7 +1301,7 @@ t
 const
 scrollTimeline
 =
-createScrollTimeline
+createScrollTimelineWithTimeRange
 (
 t
 )
@@ -1305,6 +1372,129 @@ pause
 pending
 animation
 preserves
+currentTime
+'
+)
+;
+promise_test
+(
+async
+t
+=
+>
+{
+const
+animation
+=
+createAnimation
+(
+t
+)
+;
+const
+scrollTimeline
+=
+createScrollTimeline
+(
+t
+)
+;
+animation
+.
+timeline
+=
+scrollTimeline
+;
+await
+animation
+.
+ready
+;
+animation
+.
+reverse
+(
+)
+;
+animation
+.
+pause
+(
+)
+;
+await
+updateScrollPosition
+(
+scrollTimeline
+100
+)
+;
+assert_scroll_synced_times
+(
+animation
+10
+90
+)
+;
+await
+animation
+.
+ready
+;
+animation
+.
+timeline
+=
+document
+.
+timeline
+;
+assert_false
+(
+animation
+.
+pending
+)
+;
+assert_equals
+(
+animation
+.
+playState
+'
+paused
+'
+)
+;
+assert_times_equal
+(
+animation
+.
+currentTime
+900
+)
+;
+}
+'
+Transition
+from
+a
+scroll
+timeline
+to
+a
+document
+timeline
+on
+a
+reversed
+'
++
+'
+paused
+animation
+maintains
+correct
 currentTime
 '
 )
@@ -1491,7 +1681,9 @@ assert_times_equal
 animation
 .
 currentTime
-100
+.
+value
+10
 )
 ;
 }
@@ -1584,7 +1776,9 @@ assert_times_equal
 animation
 .
 currentTime
-100
+.
+value
+10
 )
 ;
 animation
@@ -1598,7 +1792,9 @@ assert_times_equal
 animation
 .
 currentTime
-200
+.
+value
+20
 )
 ;
 }
@@ -1671,6 +1867,8 @@ assert_times_equal
 animation
 .
 currentTime
+.
+value
 0
 )
 ;
@@ -1703,7 +1901,9 @@ assert_times_equal
 animation
 .
 currentTime
-100
+.
+value
+10
 )
 ;
 }
@@ -1740,7 +1940,7 @@ t
 const
 scrollTimeline
 =
-createScrollTimeline
+createScrollTimelineWithTimeRange
 (
 t
 )
@@ -1847,7 +2047,7 @@ t
 const
 scrollTimeline
 =
-createScrollTimeline
+createScrollTimelineWithTimeRange
 (
 t
 )
