--- a/testing/web-platform/tests/scroll-animations/updating-the-finished-state.html
+++ b/testing/web-platform/tests/scroll-animations/updating-the-finished-state.html
@@ -178,6 +178,67 @@ strict
 ;
 /
 /
+TODO
+(
+crbug
+.
+com
+/
+1216655
+)
+:
+Remove
+time
+range
+.
+Once
+time
+range
+is
+removed
+all
+/
+/
+functions
+that
+include
+.
+.
+.
+WithTimeRange
+(
+)
+should
+be
+replaced
+with
+the
+same
+/
+/
+function
+but
+without
+that
+ending
+.
+For
+example
+:
+/
+/
+/
+/
+createScrollLinkedAnimationWithTimeRange
+(
+)
+=
+>
+createScrollLinkedAnimation
+(
+)
+/
+/
 -
 -
 -
@@ -376,7 +437,7 @@ t
 const
 anim
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -568,7 +629,7 @@ t
 const
 anim
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -698,7 +759,7 @@ t
 const
 anim
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -819,7 +880,7 @@ t
 const
 anim
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -998,7 +1059,7 @@ t
 const
 anim
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -1180,7 +1241,7 @@ t
 const
 anim
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -1322,7 +1383,7 @@ t
 const
 anim
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -1456,7 +1517,7 @@ t
 const
 anim
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -1649,7 +1710,7 @@ t
 const
 anim
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -1880,7 +1941,7 @@ t
 const
 anim
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -2260,7 +2321,7 @@ t
 const
 anim
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -2438,7 +2499,7 @@ t
 const
 anim
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -2594,7 +2655,7 @@ t
 const
 anim
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -2748,7 +2809,7 @@ t
 const
 anim
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -2903,7 +2964,7 @@ t
 const
 anim
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -3113,7 +3174,7 @@ t
 const
 anim
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -3318,7 +3379,7 @@ t
 const
 anim
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -3536,7 +3597,7 @@ t
 const
 anim
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -3862,7 +3923,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -4007,7 +4068,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -4079,7 +4140,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -4166,7 +4227,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -4219,7 +4280,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -4326,7 +4387,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -4414,7 +4475,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -4511,7 +4572,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -4633,7 +4694,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -4749,7 +4810,7 @@ t
 const
 anim
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
@@ -4909,7 +4970,7 @@ t
 const
 anim
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 )
