--- a/testing/web-platform/tests/scroll-animations/element-based-offset-clamp.html
+++ b/testing/web-platform/tests/scroll-animations/element-based-offset-clamp.html
@@ -363,6 +363,67 @@ use
 strict
 '
 ;
+/
+/
+TODO
+(
+crbug
+.
+com
+/
+1216655
+)
+:
+Remove
+time
+range
+.
+Once
+time
+range
+is
+removed
+all
+/
+/
+functions
+that
+include
+.
+.
+.
+WithTimeRange
+(
+)
+should
+be
+replaced
+with
+the
+same
+/
+/
+function
+but
+without
+that
+ending
+.
+For
+example
+:
+/
+/
+/
+/
+createScrollLinkedAnimationWithTimeRange
+(
+)
+=
+>
+createScrollLinkedAnimation
+(
+)
 function
 createScrollerWithTarget
 (
@@ -635,7 +696,7 @@ waitForNextFrame
 const
 animation
 =
-createScrollLinkedAnimation
+createScrollLinkedAnimationWithTimeRange
 (
 t
 timeline
